--- a/style.css
+++ b/style.css
@@ -1,56 +1,110 @@
+/* Global */
+
 * {
     margin: 0;
 }
 
 body {
-    max-width: 680px;
+    max-width: 720px;
     margin: 10px auto;
     padding: 10px;
     font-family: sans-serif;
 }
 
+/* Header */
+
 #header {
-    margin-top: 60px;
+    margin-top: 50px;
     text-align: center;
 }
+
+/* Schedule */
 
 #schedule {
     width: 100%;
-    height: 150px;
-    margin-top: 40px;
+    height: 280px;
+    margin-top: 50px;
     text-align: center;
-    background-color: #bbb;
+    border: 1px solid black;
 }
+
+#schedule-header-table {
+    width: 100%;
+    height: 12%;
+    border: 0px;
+    border-collapse: collapse;
+    table-layout: fixed;
+}
+
+.schedule-header {
+    text-align: center;
+    background-color: #f2f2f2;
+    border-bottom: 1px solid black;
+}
+
+#schedule-table {
+    width: 100%;
+    height: 88%;
+    border-collapse: collapse;
+    table-layout: fixed;
+}
+
+.schedule-cell {
+    vertical-align: top;
+    text-align: center;
+}
+
+.date-number {
+    text-align: right;
+    padding: 3px;
+}
+
+.beer-step {
+    font-size: 70%;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    margin-bottom: 2px;
+    margin-left: -1px;
+    margin-right: -1px;
+}
+
+.blue-gray {
+    background-color: #f2f2ff;
+}
+
+/* Beer list */
 
 .beers-section {
     margin-top: 40px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
     text-align: center;
 }
 
 .beers-list {
     width: 100%;
     border: none;
-    border-collapse: collapse:
+    border-collapse: collapse;
 }
-    .beer-list-header {
-        padding-bottom: 5px;
-    }
-    th {
-        border: none;
-        padding-top: 5px;
-        font-weight: normal;
-        font-style: italic;
-        color: #555;
-    }
-    td {
-        border: none;
-        padding-top: 5px;
-    }
-    .cell-left {
-        text-align: left;
-    }
-    .cell-right {
-        text-align: right;
-    }
+
+.beer-list-header {
+    border: none;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    font-weight: normal;
+    font-style: italic;
+    color: #555;
+}
+
+.beer-cell {
+    border: none;
+    padding-top: 5px;
+}
+
+.cell-left {
+    text-align: left;
+}
+
+.cell-right {
+    text-align: right;
+}
